# serializer version: 1
# name: test_events[event.fakespa_fault-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'event_types': list([
        'clock_failed',
        'flow_failed',
        'gfci_test_failed',
        'heater_dry',
        'heater_may_be_dry',
        'heater_too_hot',
        'hot_fault',
        'low_flow',
        'memory_failure',
        'priming_mode',
        'pump_stuck',
        'sensor_a_fault',
        'sensor_b_fault',
        'sensor_out_of_sync',
        'service_sensor_sync',
        'settings_reset',
        'standby_mode',
        'water_too_hot',
      ]),
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'event',
    'entity_category': None,
    'entity_id': 'event.fakespa_fault',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Fault',
    'platform': 'balboa',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fault',
    'unique_id': 'FakeSpa-fault-c0ffee',
    'unit_of_measurement': None,
  })
# ---
# name: test_events[event.fakespa_fault-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'event_type': None,
      'event_types': list([
        'clock_failed',
        'flow_failed',
        'gfci_test_failed',
        'heater_dry',
        'heater_may_be_dry',
        'heater_too_hot',
        'hot_fault',
        'low_flow',
        'memory_failure',
        'priming_mode',
        'pump_stuck',
        'sensor_a_fault',
        'sensor_b_fault',
        'sensor_out_of_sync',
        'service_sensor_sync',
        'settings_reset',
        'standby_mode',
        'water_too_hot',
      ]),
      'friendly_name': 'FakeSpa Fault',
    }),
    'context': <ANY>,
    'entity_id': 'event.fakespa_fault',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
